--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Anonymous.GitHub.io by dyfong1</title>
+    <title>Anonymous.GitHub.io by Dylan and Leon</title>
   </head>
 
   <body>
