--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Anonymous.GitHub.io by Dylan and Leon</title>
+    <title>Anonymous.GitHub.io by dyfong1</title>
   </head>
 
   <body>
@@ -27,8 +27,8 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Anonymous.GitHub.io</h1>
-            <h2></h2>
+            <h1>Anonymous</h1>
+            <h2>Dylan and Leon</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
