--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-<p>Dylan plays baseball
-  Leon rides bikes
-</p>
+<p>Dylan plays baseball. Leon rides bikes.</p>
+
 <ul>
 <li>http://www.mashsf.com/</li>
 <li>http://www.mlb.com/</li>
